--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/beshprakash11/notes-api#readme",
   "dependencies": {
-    "expressjs": "^1.0.1",
+    "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "mongose": "^0.0.2-security",
     "nodemon": "^2.0.20"
   }
