README.md updated

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notes-api",
   "version": "1.0.0",
-  "description": "Notes api server develop using expressjs",
+  "description": "Notes api server develop using express",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
