--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
-    "mongose": "^0.0.2-security",
+    "mongoose": "^6.7.3",
     "nodemon": "^2.0.20"
   }
 }
